[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "parking_lot"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "postgres", "time", "chrono" ] }
